# cpd-helicopter

./: .env.example  .gitignore  README.md  REFACTOR_PLAN.md  ad389e_flights.csv  config.py  docker-compose.yml  flights-to-csv.js  flights.csv  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: backfill-telemetry.yml  daily-sync.yml  export-notebooks.yml  test.yml
data/: flights.parquet
notebooks/: flight_analysis.ipynb  flight_analysis.py
scripts/: export_data.py
src/: __init__.py  database.py  main.py  models.py  scraper.py
tests/: __init__.py  test_database.py  test_main.py  test_scraper.py  test_telemetry.py
